# agent-room

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTES.md  PLANS.md  README.md  README_ja.md  pyproject.toml  start.sh  stop.sh
backend/app/: cli.py  main.py  paths.py  schemas.py  settings.py
backend/app/api/: agents.py  attachments.py  auto_agents.py  chat.py  conversations.py  health.py  models.py  presets.py
backend/app/orchestration/: auto_agents.py  factory.py  llm.py  runner.py
backend/app/storage/: conversation_repo.py  preset_repo.py
backend/app/tools/: image.py  url_fetch.py
backend/tests/: test_agent_interfaces.py  test_llm.py  test_orchestration_runner.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  AutoAgentDialog.tsx  ChatStream.tsx  ConversationDownload.tsx  MessageBubble.tsx  PatternToggle.tsx  PresetActions.tsx  PromptInput.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  conversationExport.ts  store.ts  types.ts
frontend/src/routes/: Orchestration.tsx  Simulation.tsx
