[project]
name = "agent-room"
version = "0.1.0"
description = "Local-first multi-agent chat room for LM Studio"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
  "agent-framework>=1.0.0",
  "anyio>=4.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[dependency-groups]
dev = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

